--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,13 @@
+build:
+  version: "1.0.0"
 server:
   port: 8080
 spring:
   application:
-    name: accounts
+    name: payroll
+  config:
+    import:
+      "optional:configserver:http://localhost:8071"
   datasource:
     url: jdbc:h2:mem:testdb
     username: pb
@@ -16,3 +21,5 @@ spring:
   h2:
     console:
       enabled: true
+  profile:
+    active: "dev"
