--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -109,10 +113,10 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
-				<version>3.4.3</version>
+				<version>3.4.1</version>
 				<configuration>
 					<to>
-						<image>docker.io/prateekbhat165/payroll</image>
+						<image>prateekbhat165/${project.artifactId}:1.0.0</image>
 					</to>
 				</configuration>
 			</plugin>
