--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,33 @@ spring:
       enabled: true
   profile:
     active: "dev"
+
+management:
+  info:
+    env:
+      enabled: true
+
+  endpoint:
+    shutdown:
+      enabled: true
+
+endpoints:
+  shutdown:
+    enabled: true
+
+eureka:
+  instance:
+    preferIpAddress: true
+
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: "http://localhost:8070/eureka/"
+
+
+info:
+  app:
+    name: payroll
+    description: payroll microservice
+    version: "1.0.0"
